include font-awesome script for icons

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
-<div>
-  Testing
+<div class="navbar-container">
+  <i class="fa fa-user" aria-hidden="true"></i>
   <% if user_signed_in? %>
        <%= link_to('logout', destroy_user_session_path, method: :delete) %>
     <% else %>
