initialize react and add basic navbar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <%= render partial: "shared/navbar" %>
+    <%= render partial: "/shared/navbar" %>
     <%= yield %>
   </body>
 </html>
