--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -6,12 +6,33 @@
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
-  border-bottom: solid 1px black;
+  background: rgba(255, 255, 255, .9);
+  z-index: 7;
+  -webkit-box-shadow: 0px 0px 4px 0px rgba(0,0,0,.5);
+  -moz-box-shadow: 0px 0px 4px 0px rgba(0,0,0,.5);
+  box-shadow: 0px 0px 4px 0px rgba(0,0,0,.5);
+  text-align: center;
 
-  .placeholder, .user-account {
+  .user-account {
     width: 50px;
     padding: 20px;
-    text-align: center;
     font-size: 30px;
+  }
+
+  .nav-links {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+
+    div {
+      padding: 0 20px;
+    }
+
+    .home-link {
+      img {
+        width: 100px;
+      }
+    }
   }
 }
