--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,25 +1,37 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Restaurants</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @restaurants.each do |restaurant| %>
-      <tr>
-        <td><%= link_to 'Show', restaurant %></td>
-        <td><%= link_to 'Edit', edit_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', restaurant, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<div class="restaurant-container">
+  <h1>We Can't Decide! Let's Pick A Random One!</h1>
+  <!-- <div class="type-chooser">
+    <% ['American', 'Chinese', 'Mediterranean', 'Sushi', 'Italian', 'Mexican', 'Indian'].each do |restaurant_type| %>
+      <div class="type-choice">
+        <input type="checkbox", value=<%= restaurant_type %>, class="type-checkbox" />
+        <label><%= restaurant_type %></label>
+      </div>
     <% end %>
-  </tbody>
-</table>
+    <%= form_for restaurants_path, method: "GET", :html => { class: 'restaurants_possible_form' }, remote: true do |f| %>
+      <%= f.hidden_field :type_array, class: "food_type_array" %>
+    <% end %>
+  </div> -->
+  <div class="restaurant-panels">
+    <div class="possible-restaurants rest-panel">
+      <h3>Possible Restaurants:</h3>
+      <div class="restaurant-list-container">
+        <%= render partial: "restaurants/possible", locals: { restaurants: @restaurants } %>
+      </div>
+    </div>
+    <%= render partial: "restaurants/add", locals: { restaurants: @restaurants } %>
+    <div class="random-restaurant rest-panel">
+      <div class="restaurant-display">
+        <div class="restaurant-title">
+        </div>
+      </div>
+      <div class="restaurant-button-container">
+        <%= form_for restaurants_path, method: "GET", class: "random_restaurant_form", remote: true do |f| %>
+          <%= hidden_field_tag :search, true %>
+          <button type="submit" class="pick-restaurant-btn">Choose</button>
+        <% end %>
+        <button type="button" class="add-restaurant-btn">Add A Restaurant</button>
+      </div>
+    </div>
+  </div>  
+</div>
 
-<br>
-
-<%= link_to 'New Restaurant', new_restaurant_path %>
